@startuml
skinparam classAttributeIconSize 0
hide methods
hide circle
scale 1.0

package "Modèle du Domaine (Business View)" {
    class Hotel {
        nom
        adresse
    }

    class Utilisateur {
        identifiant
        motDePasse
        role
        estActif
    }

    class Employe {
        nom
        prenom
        role
        coordonnees
    }

    class Client {
        nom
        prenom
        telephone
        email
        typeClient
    }

    class Chambre {
        numero
        categorie
        statut
        prixBase
        description
    }

    class Reservation {
        dateDebut
        dateFin
        statut
        nombrePersonnes
    }

    class ServiceSupplementaire {
        nom
        prix
        description
    }

    class Facture {
        dateEmission
        montantTotal
        statut
        details
    }

    class TacheEntretien {
        description
        date
        priorite
        statut
    }
}

' Relations Métier
Utilisateur "1" - "0..1" Employe : correspond à >
Employe "1" -- "*" TacheEntretien : réalise >
Client "1" -- "*" Reservation : effectue >
Reservation "*" -- "1" Chambre : concerne >
Reservation "*" -- "*" ServiceSupplementaire : inclut >
Reservation "1" -- "0..1" Facture : engendre >
Chambre "1" -- "*" TacheEntretien : nécessite >

note "Ce diagramme représente les entités\nmétier pures sans implémentation technique." as N1

@enduml
